--- a/Home page/home.html
+++ b/Home page/home.html
@@ -22,7 +22,7 @@
               <img src="" alt="Logo" />
             </a>
           </li>
-          <li><a href="#">Search</a></li>
+          <li><a href="/Search Result page/result.html" target="_blank">Search</a></li>
           <li><a href="#">Hotels</a></li>
           <li><a href="#">Popular</a></li>
         </div>
@@ -321,8 +321,9 @@
       <div class="align-right fs-300">
         <ul>
           <li class="fw-semi-bold"><a href="#">Support</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="/FAQ section/faq.html" target="_blank">FAQ</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="/About Us section/about.html" target="_blank">About US</a></li>
         </ul>
       </div>
     </footer>
