--- a/Home page/index.html
+++ b/Home page/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./home.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800;900&display=swap"
-      rel="stylesheet"
+      rel="stylesheet" 
     />
     <title>[Name]</title>
   </head>
@@ -22,7 +22,9 @@
               <img src="" alt="Logo" />
             </a>
           </li>
-          <li><a href="/Search Result page/result.html" target="_blank">Search</a></li>
+          <li>
+            <a href="/Search Result page/result.html" target="_blank">Search</a>
+          </li>
           <li><a href="#">Hotels</a></li>
           <li><a href="#">Popular</a></li>
         </div>
@@ -323,7 +325,9 @@
           <li class="fw-semi-bold"><a href="#">Support</a></li>
           <li><a href="/FAQ section/faq.html" target="_blank">FAQ</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="/About Us section/about.html" target="_blank">About US</a></li>
+          <li>
+            <a href="/About Us section/about.html" target="_blank">About US</a>
+          </li>
         </ul>
       </div>
     </footer>
