Link all the existing pages

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -165,7 +165,7 @@
             </div>
             <h3 class="fs-400">Soho Hotel</h3>
             <p class="fs-200">London</p>
-            <a class="card-link fs-200" href="#"
+            <a class="card-link fs-200" href="/Hotel Details page/detail.html"
               >Starting form $130/night
               <span class="card-arrow"
                 ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
