update for the project

--- a/Hotel Details page/detail.html
+++ b/Hotel Details page/detail.html
@@ -49,7 +49,7 @@
         </div>
         <div class="tinyImage">
           <div><img class="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSd0oHbSl_lT3yl-QcNhYFld9gfviXEv4Rg-uB4Nvly1a7lQme9DVSG5yQOGg&s" height="200" width="300"></div>
-          <div><img class="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSd0oHbSl_lT3yl-QcNhYFld9gfviXEv4Rg-uB4Nvly1a7lQme9DVSG5yQOGg&s" height="200" width="300"></div>
+          <div><img class="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSd0oHbSl_lT3yl-QcNhYFld9gfviXEv4Rg-uB4Nvly1a7lQme9DVSG5yQOGg&s" ></div>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
       <div class="Overview">
         <div class="list">
           <ul>
-            <li>Free Wifi</li>
+            <li><i class="fa-solid fa-wifi"></i>Free Wifi</li>
             <li>Air Conditioning</li>
             <li>Private Bathroom</li>
             <li>Key Card access</li>
