Connect login and registrtion page with home page

--- a/Login and registration/index.html
+++ b/Login and registration/index.html
@@ -15,9 +15,9 @@
         <button type="button" class="toggle-btn" onclick="register()" >Register</button>
       </div>
       <div class="social-icons">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images/google.svg" alt="">
+        <img src="images/facebook.svg" alt="">
+        <img src="images/x-twitter.svg" alt="">
       </div>
       <form action="" class="input-group" onclick="login()" id="login">
         <input type="text" class="input-field" placeholder="User ID" required>
@@ -25,9 +25,12 @@
         <input type="checkbox" class="check-box"> <span>Remember password</span>
         <button type="submit" class="submit-btn">Log In</button>
       </form>
+
       <form action="" class="input-group" id="register">
-        <input type="text" class="input-field" placeholder="Email ID" required>
-        <input type="text" class="input-field" placeholder="Enter Password">
+        <input type="text" class="input-field" placeholder="Enter username" required>
+        <input type="email" class="input-field" placeholder="Enter email" required>
+        <input type="password" class="input-field" placeholder="Enter Password" required>
+        <input type="password" class="input-field" placeholder="Confirm Password" required>
         <input type="checkbox" class="check-box"> <span>I agree to the terms and condition</span>
         <button type="submit" class="submit-btn">Register</button>
       </form>
