--- a/Home page/home.html
+++ b/Home page/home.html
@@ -33,10 +33,10 @@
           <li><a href="#">Popular</a></li>
         </div>
         <div class="flex-container gap-2x">
-          <a href="#" class="bg-red fs-300 text-primary-400 px-2py-6 round"
+          <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round"
             >Login</a
           >
-          <a href="#" class="bg-red fs-300 text-primary-400 px-2py-6 round"
+          <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round"
             >Sign Up</a
           >
         </div>
