--- a/FAQ section/faq.html
+++ b/FAQ section/faq.html
@@ -97,6 +97,36 @@
     <button onclick="toggleAnswer(8)">&#8744;</button>
     <p id="answer-8">Contact information about the hotels such as phone number,website and locations are included in our website. You can contact them using these informations.</p>
    </li>
+   <li>
+    <span>How long does it take for my review to appear on the website?</span>
+    <button onclick="toggleAnswer(9)">&#8744;</button>
+    <p id="answer-9">Unless there are some exception cases like network connection problems,it will appear on the website right after you submit it.</p>
+   </li>
+   <li>
+    <span>Do I get any rewards or incentives for leaving a review?</span>
+    <button onclick="toggleAnswer(10)">&#8744;</button>
+    <p id="answer-10">Not really.There isn't any reward for leaving a review but considering your review the hotels might improve their services so that you can get a better services for next time.</p>
+   </li>
+   <li>
+    <span>Are there any guidelines or restrictions for leaving a review on the website?</span>
+    <button onclick="toggleAnswer(11)">&#8744;</button>
+    <p id="answer-11">. Yes,there are guidelines and restrictions for leaving a review. For example,profanity, hate speech, or personal attacks are prohibited.It is also required that the review should be based on personal experience and not hearsay or rumors</p>
+   </li>
+   <li>
+    <span>Are there any restrictions on a number of reviews i can leave for a particular hotel?</span>
+    <button onclick="toggleAnswer(12)">&#8744;</button>
+    <p id="answer-12">No, there are no restrictions on number of reviews you can leave.</p>
+   </li>
+   <li>
+    <span>Are there any penalties for hotels that receive consistently negative reviews?</span>
+    <button onclick="toggleAnswer(13)">&#8744;</button>
+    <p id="answer-13">As a hotel reviewing website,we only focus on customers being able to review hotels so that others can choose the hotels suitable for their stay.We don't reward or punish hotels based on review.</p>
+   </li>
+   <li>
+    <span>How can i report a fake or fraudulent review on the webiste?</span>
+    <button onclick="toggleAnswer(14)">&#8744;</button>
+    <p id="answer-14">If you think that other's reviews are fake or you have a different opinion, You can also leave your own review from your experience.</p>
+   </li>
   </ul>
  </section>
  <script>
