--- a/Search Result page/map.html
+++ b/Search Result page/map.html
@@ -18,6 +18,6 @@
 <body>
     <div id="map"></div>
     
-    <script src="map.js"></script>
+    <script src="./js/map.js"></script>
 </body>
 </html>
