--- a/Review Submission page/review.html
+++ b/Review Submission page/review.html
@@ -59,7 +59,7 @@
                    </div>
                    <div class="review-box">
                     <div class="profile-picture">
-                      <img class="profile" src="profile-picture/profile2.avif">
+                      <img class="profile" src="profile-picture/profile2.jpg">
                     </div>
                     <div class="review-content">
                       <h4 class="name">victoria Adam</h4>
