update with the pages

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -44,8 +44,8 @@
             <li><a href="#">Popular</a></li>
           </div>
           <div class="flex-container gap-2x">
-            <a href="#" class="bg-red fs-300 text-primary-400 px-2py-6 round">Login</a>
-            <a href="#" class="bg-red fs-300 text-primary-400 px-2py-6 round">Sign Up</a>
+            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round">Login</a>
+            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round">Sign Up</a>
           </div>
         </menu>
       </nav>
