--- a/Search Result page/results.html
+++ b/Search Result page/results.html
@@ -24,10 +24,10 @@
         <li><a href="#">Popular</a></li>
       </div>
       <div class="left-cont flex-container gap-2x">
-        <a href="#" class="login bg-red fs-300 text-primary-400 px-6py-2 round"
+        <a href="/Login and registration/index.html" class="login bg-red fs-300 text-primary-400 px-6py-2 round"
           >Login</a
         >
-        <a href="#" class="sign-up bg-red fs-300 text-primary-400 px-6py-2 round"
+        <a href="/Login and registration/index.html" class="sign-up bg-red fs-300 text-primary-400 px-6py-2 round"
           >Sign Up</a
         >
       </div>
