update with the pages

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -38,9 +38,9 @@
               </a>
             </li>
             <li>
-              <a href="/Search Result page/result.html" target="_blank">Search</a>
+              <a href="/Search Result page/results.html" target="_blank">Search</a>
             </li>
-            <li><a href="#">Hotels</a></li>
+            <li><a href="/Hotel Details page/detail.html">Hotels</a></li>
             <li><a href="#">Popular</a></li>
           </div>
           <div class="flex-container gap-2x">
@@ -161,7 +161,7 @@
               </div>
               <h3 class="fs-400">Soho Hotel</h3>
               <p class="fs-200">London</p>
-              <a class="card-link fs-200" href="#"
+              <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
                 <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
@@ -185,7 +185,7 @@
               </div>
               <h3 class="fs-400">Soho Hotel</h3>
               <p class="fs-200">London</p>
-              <a class="card-link fs-200" href="#"
+              <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
                 <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
@@ -209,7 +209,7 @@
               </div>
               <h3 class="fs-400">Soho Hotel</h3>
               <p class="fs-200">London</p>
-              <a class="card-link fs-200" href="#"
+              <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
                 <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
@@ -229,7 +229,7 @@
               </div>
               <h3 class="fs-400">Soho Hotel</h3>
               <p class="fs-200">London</p>
-              <a class="card-link fs-200" href="#"
+              <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
                 <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
@@ -249,12 +249,13 @@
               </div>
               <h3 class="fs-400">Soho Hotel</h3>
               <p class="fs-200">London</p>
-              <a class="card-link fs-200" href="#"
+              <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
                 <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
           </div>
+          
         </section>
         <div class="flex-container cta">
           <div class="flex-container gap-2x">
@@ -272,10 +273,10 @@
       </main>
       <footer class="flex-container space-between vertical-align-center">
         <div>
-          <h2 class="fw-semi-bold fs-400">[Name]</h2>
+          <h2 class="fw-semi-bold fs-400">MIREN</h2>
           <p class="fs-300">Your choice since 2002</p>
           <div class="copy-right">
-            <small class="fs-200">[Name] &copy;</small>
+            <small class="fs-200">mirenreviews &copy;</small>
           </div>
         </div>
         <div class="align-right fs-300">
