--- a/Hotel Details page/detail.html
+++ b/Hotel Details page/detail.html
@@ -11,18 +11,18 @@
     <header class="header-container">
       <div class="heading1">
         <div class="logo">
-            <img src="./miren-reviews-logo-zip-file/png/logo-black.png " width="100px">
+            <img src="/About Us section/img/logo-no-background.png" class="logo">
         </div>
         <div class="navigation">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#search">Search</a></li>
+            <li><a href="/Home page/home.html">Home</a></li>
+            <li><a href="/Search Result page/results.html">Search</a></li>
             <li><a href="#popular">Popular</a></li>
       </div>
       </div>
 
       <div class="buttonDiv">
-        <a href=""><button class="buttonStyle">Login</button></a>
-        <a href=""><button class="buttonStyle">SignUp</button></a>
+        <a href="/Login and registration/index.html" target="_blank"><button class="buttonStyle">Login</button></a>
+        <a href="/Login and registration/index.html" target="_blank"><button class="buttonStyle">SignUp</button></a>
 
       </div>
       
@@ -285,7 +285,7 @@
         </div>
       </div>
     </div>
-    
+    <div class="review"><a href="/Review Submission page/review.html">Enter you review</a></div>
     </main>
     <footer class="footer">
       <div>
@@ -295,9 +295,8 @@
       <div>
         <div class="navigation2">
           <li><a href="#support">Support</a></li>
-          <li><a href="#faq">FAQ</a></li>
+          <li><a href="/FAQ section/faq.html">FAQ</a></li>
           <li><a href="#contactus">Contact Us</a></li>
-          <li><a href="#howtoguide">How to Guide</a></li>
         </div>
       </div>
     </footer>
