--- a/Search Result page/results.html
+++ b/Search Result page/results.html
@@ -19,8 +19,8 @@
             />
           </a>
         </li>
-        <li><a href="#" target="_blank">Search</a></li>
-        <li><a href="#">Hotels</a></li>
+        <!-- <li><a href="#" target="_blank">Search</a></li> -->
+        <li><a href="/Hotel Details page/detail.html">Hotels</a></li>
         <li><a href="#">Popular</a></li>
       </div>
       <div class="left-cont flex-container gap-2x">
