update with the pages

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -15,7 +15,13 @@
 
   <body>
     <section class="banner">
-      <img src="./assets/miren-reviews-high-resolution-logo-white-transparent.png" class="logo" alt="logo" />
+      <a href="./home.html">
+        <img
+          src="./assets/miren-reviews-high-resolution-logo-white-transparent.png"
+          class="logo"
+          alt="logo"
+        />
+      </a>
       <div class="banner-text">
         <h1>MIREN reviews</h1>
         <p>Where Opinions Meet Comfort - Your Ultimate Hotel Review Hub</p>
@@ -38,14 +44,24 @@
               </a>
             </li>
             <li>
-              <a href="/Search Result page/results.html" target="_blank">Search</a>
+              <a href="/Search Result page/results.html" target="_blank"
+                >Search</a
+              >
             </li>
             <li><a href="/Hotel Details page/detail.html">Hotels</a></li>
             <li><a href="#">Popular</a></li>
           </div>
           <div class="flex-container gap-2x">
-            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round">Login</a>
-            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round">Sign Up</a>
+            <a
+              href="/Login and registration/index.html"
+              class="bg-red fs-300 text-primary-400 px-2py-6 round"
+              >Login</a
+            >
+            <a
+              href="/Login and registration/index.html"
+              class="bg-red fs-300 text-primary-400 px-2py-6 round"
+              >Sign Up</a
+            >
           </div>
         </menu>
       </nav>
@@ -54,10 +70,15 @@
           <h1>Find your perfect hotel with Miren</h1>
           <p>Over 1 million rooms worldwide are waiting for you!</p>
         </div>
-        <form action="#" method="get">
+        <form action="../Search Result page/results.html" method="get">
           <div class="form-child">
             <label for="location">Location</label>
-            <input type="text" name="location" id="location" placeholder="Where do you wanna go?" />
+            <input
+              type="text"
+              name="location"
+              id="location"
+              placeholder="Where do you wanna go?"
+            />
           </div>
           <div class="form-child">
             <label for="check-in">Check-in date</label>
@@ -81,7 +102,12 @@
           </div>
           <div class="form-child">
             <label for="guests">Number of guests</label>
-            <input type="number" name="guests" id="guests" placeholder="Enter number of guests" />
+            <input
+              type="number"
+              name="guests"
+              id="guests"
+              placeholder="Enter number of guests"
+            />
           </div>
           <div class="form-child">
             <label for="search" aria-hidden="true">Search</label>
@@ -96,29 +122,53 @@
           <h2 class="my-4 fs-400">Explore popular destinations</h2>
           <div class="grid-container grid-2x4 gap-1x">
             <div class="grid-item-1 relative">
-              <img class="card-img" src="./assets/images/small/redd-f-nTBW1cOY1qI-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/redd-f-nTBW1cOY1qI-unsplash.jpg"
+                alt=""
+              />
               <div class="faded-box">
                 <span class="faded-box absolute bottom-left fs-200">Paris</span>
               </div>
             </div>
             <div class="relative">
-              <img class="card-img" src="./assets/images/small/aurelien-romain-zHth1uFXV6I-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/aurelien-romain-zHth1uFXV6I-unsplash.jpg"
+                alt=""
+              />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="grid-item-3 relative">
-              <img class="card-img" src="./assets/images/small/jason-leung-yux412uKpG0-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/jason-leung-yux412uKpG0-unsplash.jpg"
+                alt=""
+              />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img class="card-img" src="./assets/images/small/gaddafi-rusli-2ueUnL4CkV8-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/gaddafi-rusli-2ueUnL4CkV8-unsplash.jpg"
+                alt=""
+              />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img class="card-img" src="./assets/images/small/jonathan-chng-7_WyzplsaSE-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/jonathan-chng-7_WyzplsaSE-unsplash.jpg"
+                alt=""
+              />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img class="card-img" src="./assets/images/small/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg" alt="" />
+              <img
+                class="card-img"
+                src="./assets/images/small/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg"
+                alt=""
+              />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
           </div>
@@ -128,7 +178,11 @@
           <div class="flex-container gap-1x">
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img class="img" src="./assets/images/visualsofdana-T5pL6ciEn-I-unsplash.jpg" alt="" />
+                <img
+                  class="img"
+                  src="./assets/images/visualsofdana-T5pL6ciEn-I-unsplash.jpg"
+                  alt=""
+                />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -143,12 +197,17 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img class="img" src="./assets/images/rooms/huy-nguyen-mVLMZiILyxM-unsplash.jpg" alt="" />
+                <img
+                  class="img"
+                  src="./assets/images/rooms/huy-nguyen-mVLMZiILyxM-unsplash.jpg"
+                  alt=""
+                />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -163,7 +222,8 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
@@ -187,7 +247,8 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
@@ -211,12 +272,17 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img class="img" src="./assets/images/rooms/sasha-kaunas-67-sOi7mVIk-unsplash.jpg" alt="" />
+                <img
+                  class="img"
+                  src="./assets/images/rooms/sasha-kaunas-67-sOi7mVIk-unsplash.jpg"
+                  alt=""
+                />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -231,12 +297,17 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img class="img" src="./assets/images/rooms/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" alt="" />
+                <img
+                  class="img"
+                  src="./assets/images/rooms/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg"
+                  alt=""
+                />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -251,11 +322,11 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"
+                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
           </div>
-          
         </section>
         <div class="flex-container cta">
           <div class="flex-container gap-2x">
@@ -263,8 +334,8 @@
             <div>
               <h3 class="fw-bold">Exclusive Offer!</h3>
               <p class="fs-300">
-                Want to receive exclusive offers and the best prices for your dream stays? Sign up now to join our
-                Travel Club!
+                Want to receive exclusive offers and the best prices for your
+                dream stays? Sign up now to join our Travel Club!
               </p>
             </div>
           </div>
@@ -285,7 +356,9 @@
             <li><a href="/FAQ section/faq.html" target="_blank">FAQ</a></li>
             <li><a href="#">Contact</a></li>
             <li>
-              <a href="/About Us section/about.html" target="_blank">About US</a>
+              <a href="/About Us section/about.html" target="_blank"
+                >About US</a
+              >
             </li>
           </ul>
         </div>
