--- a/Hotel Details page/detail.html
+++ b/Hotel Details page/detail.html
@@ -11,7 +11,7 @@
     <header class="header-container">
       <div class="heading1">
         <div class="logo">
-            <img src="/About Us section/img/logo-no-background.png" class="logo">
+            <a href="../Home page/home.html"><img src="/About Us section/img/logo-no-background.png" class="logo"></a>
         </div>
         <div class="navigation">
             <li><a href="/Home page/home.html">Home</a></li>
