--- a/Login and registration/index.html
+++ b/Login and registration/index.html
@@ -21,7 +21,7 @@
       </div>
       <form action="" class="input-group" onclick="login()" id="login">
         <input type="text" class="input-field" placeholder="Enter username" required>
-        <input type="text" class="input-field" placeholder="Enter Password">
+        <input type="password" class="input-field" placeholder="Enter Password">
         <input type="checkbox" class="check-box"> <span>Remember password</span>
         <button type="submit" class="submit-btn">Log In</button>
       </form>
