--- a/About Us section/about.html
+++ b/About Us section/about.html
@@ -22,10 +22,12 @@
   <body>
     <header>
       <div class="logo">
-        <img class="img1"
-          src=".\img\logo-no-background.png"
-          alt="company_logo"
-        />
+        <a href="../Home page/home.html">
+          <img class="img1"
+            src=".\img\logo-no-background.png"
+            alt="company_logo"
+          />
+        </a>
       </div>
       <div class="links">
         <a href="/Search Result page/results.html" target="_blank">
