--- a/Review Submission page/review.html
+++ b/Review Submission page/review.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" required maxlength="30" minlength="10">
 
 
       <label for="password">Password:</label>
